# AI_Engineering

./: requirements.txt
1-Pydantic/: pydantic.ipynb
2-Langchain Basics/: gettingstartedlangchain.ipynb
2-Langchain Basics/2.1-DataIngestion/: dataIngestion.ipynb  generate_pdf.py
2-Langchain Basics/2.2-DataTransformer/: 1-Recursivetextsplitter.ipynb
2-Langchain Basics/2.3-Embeddings/: 2.3.1-embeddings.ipynb  2.3.2-huggingface.ipynb  speech.txt
Langgraph/: langgraph_class_3.ipynb  langgraph_class_4.ipynb  langgraph_class_5.ipynb  langgraph_intro.ipynb  tools.ipynb
Langgraph/data/: data.txt
Learning/: async.py  fastapi-lifecycle.py  main.py
Learning/Project1/: database.py  docker-compose.yml  main.py  models.py
Project1/Code/: code.ipynb
Project2/: code.ipynb
Project3/Code/: code.ipynb
ai-engineering-nexus/: .gitignore  main.py  pyproject.toml
ai-engineering-nexus/ai-chat/: config.py  learning-notes.md  main.py  models.py  pyproject.toml
ai-engineering-nexus/ai-qna/: README.md  learning-notes.md  main.py  pyproject.toml  test_api.py
ai-engineering-nexus/async-task-executor/: README.md  pyproject.toml  requirements.txt
ai-engineering-nexus/event-loop-profiler/: pyproject.toml
ai-engineering-nexus/event-loop-profiler/examples/: basic_monitor.py
ai-engineering-nexus/event-loop-profiler/interview-prep/: week2.md
ai-engineering-nexus/event-loop-profiler/learning-notes/: day01.md  day02.md
ai-engineering-nexus/event-loop-profiler/src/event_loop_profiler/: blocking_detector.py  models.py  monitor.py
(+23 files in other folders)
